[package]
name = "aks_primality_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = { version = "1.22.0", default-features = false, features = [
    "integer",
    "float",
], optional = true }


env_logger = { version = "0.10.0", optional = true }
itertools = "0.11.0"
log = { version = "0.4.14", features = [
    "max_level_trace",
    "release_max_level_trace",
], optional = true }
malachite = "0.4.0"
rayon = "1.7.0"
[features]
default = ["log", "rug"]
log = ["dep:env_logger", "dep:log"]
rug = ["dep:rug"]                   # TODO: search for a way to not load malachite
