[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10.0" }
itertools = "0.11.0"
log = { version = "0.4.14", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
rug = "1.14.0"
aks_primality_test = { path = "../aks_primality_test", features = [
    "log",
    "rug",
] }

[[bin]]
name = "aks"
path = "src/main.rs"
