[package]
name = "aks_primality_test_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aks_primality_test = { path = "../aks_primality_test", default-features = false }
wasm-bindgen = "0.2.87"
